// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpportunityCard matches the layout 1`] = `
<body>
  <div />
</body>
`;

exports[`OpportunityCard matches the layout when status is first come first serve 1`] = `
<body>
  <div>
    <div
      class="dashboard-opportunity-card-due-date text-bold"
    >
      First Come, First Serve
    </div>
  </div>
</body>
`;

exports[`OpportunityCard matches the layout when status is rolling application 1`] = `
<body>
  <div>
    <div
      class="dashboard-opportunity-card-due-date text-bold"
    >
      Rolling Application
    </div>
  </div>
</body>
`;

exports[`OpportunityCard matches the layout with a due date 1`] = `
<body>
  <div>
    <div
      class="dashboard-opportunity-card-due-date"
    >
      <span
        class="dashboard-opportunity-card-due-date-header"
      >
        Due: 
      </span>
      09/01/2030
       
    </div>
  </div>
</body>
`;
